--- a/css/objects/bento-grid.css
+++ b/css/objects/bento-grid.css
@@ -5,7 +5,7 @@
   display: grid;
   gap: 1rem;
   box-sizing: border-box;
-  grid-template-rows: 18.125rem 10rem 13.5rem 29rem 23rem 13.5rem 15rem 22rem;
+  grid-template-rows: repeat(8, auto);
   grid-template-areas:
     "box-1"
     "box-2"
@@ -15,6 +15,7 @@
     "box-6"
     "box-7"
     "box-8";
+  align-self: flex-start;
 }
 
 @media screen and (min-width: 768px) {
